# brij-lambda-ingest-pipeline

./: .gitignore  .terraform.lock.hcl  Dockerfile  MIGRATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  terraform.tf
.github/workflows/: test.yml
__test__/: test_hello.py  test_main.py
scripts/: build_layer.sh  deploy.sh
src/ingest_pipeline/: main.py
